simple.html Tag example Update con --amend 1.2

--- a/simple.html
+++ b/simple.html
@@ -2,7 +2,7 @@
 <-- changes nel branc-->
 
 <head>
-	<title>Branches stash example prova</title>
+	<title>TAG compare example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
